--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "node build/build.js",
     "build:report": "npm_config_report=true node build/build.js",
     "lint": "eslint --ext .js,.vue src",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "easymock": "easymock init"
   },
   "dependencies": {
     "axios": "0.17.1",
@@ -19,6 +20,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "vue": "2.5.10",
+    "vue-ls": "^3.0.5",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
